@@ -24,8 +24,8 @@ char *INPerror(int type)
     char *ebuf;
 
 /*CDHW Lots of things set errMsg but it is never used  so let's hack it in CDHW*/
-    if ( errMsg ) {
-      val = errMsg; errMsg=NULL; }
+    if ( errMsg )
+      val = errMsg;
     else
 /*CDHW end of hack CDHW*/
     val = SPerror(type);
@@ -55,5 +55,6 @@ char *INPerror(int type)
       sprintf(ebuf, "%s\n", val);
     }
 #endif /* HAVE_ASPRINTF */
+    FREE(errMsg);
     return ebuf;
 }
